fixed stretched newton image by Removing width.

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ nav {
 
 .logo-newton {
   clip-path: circle(40%);
-  width: 100px;
+  /* width: 50px; */
 }
 
 .logo-text {
